# 20260713-Agentic-AI

support-api/: .dockerignore  pyproject.toml
support-api/docker/: Dockerfile  docker-compose.yml
support-api/src/support_api/: __init__.py  filters.py  stream.py
support-api/src/support_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
support-api/src/support_api/api/: __init__.py  errors.py  middleware.py
support-api/src/support_api/api/blueprints/: tickets.py
support-api/src/support_api/models/: __init__.py  customer.py  ticket.py
support-api/src/support_api/storage/: __init__.py  db.py  queries.py  schema.sql
