[project]
name = "support-api"
version = "0.1.0"
description = "Customer Support Intelligence Platform — backend service."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "structlog>=24.4",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "gunicorn>=22.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
support_api = ["storage/schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true